# project-pim

./: .gitignore  CLA.md  READEME.md  README.md  activation.py  ai_app.py  ase_manager.py  auth.py  config.ini  install.sh  install_ibmi.sh  install_linux.sh  partition.py  pyproject.toml  requirements.txt  storage.py  string_util.py  virtual_network.py  virtual_storage.py  vopt_storage.py
actions/: destroy.py  launch.py  rollback.py  status.py  update_compute.py  update_config.py  upgrade.py
app/: ai_app.py  ai_app_exception.py
auth/: auth.py  auth_exception.py
base-image/: CLA.md  Containerfile  README.md  base_config.service  base_config.sh  get_pimconfig.sh  pimconfig.service  vllm.container
cli/: README.md  pim.py
cmd/: ase_manager.py  pim.py  pim_exception.py  status.py  upgrade.py
docs/: builder-guide.md  configuration-guide.md  deployer-guide.md  user-roles.md
examples/: .gitignore  CLA.md  README.md  generator.py
examples/hmc-agent/app/: Containerfile  README.md  agent.py  hmc.py  pyproject.toml  server.py
fraud-analytics/: Containerfile  Dockerfile  README.md  fitted_mapper.pkl  get_transactions.sql  insert_trigger.sql  linux-inference-endpoint.py  requirements.txt
hmc-agent/: README.md  agent.py  hmc.py  pyproject.toml  server.py
network/: network_exception.py  virtual_network.py
partition/: activation.py  partition.py  partition_exception.py
partition-flavor/: large.ini  medium.ini  small.ini
storage/: storage.py  storage_exception.py  virtual_storage.py  vopt_storage.py
utils/: actions_util.py  command_util.py  common.py  (+4 more)
(+81 files in other folders)
