[project]
name = "pim"
version = "0.1.0"
description = "Power Inferencing Microservices Cli"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"bcrypt==4.3.0",
"beautifulsoup4==4.13.4",
"bs4==0.0.2",
"certifi==2025.6.15",
"cffi==1.17.1",
"charset-normalizer==3.4.2",
"configobj==5.0.9",
"cryptography==45.0.4",
"idna==3.10",
"jinja2==3.1.6",
"lxml==6.0.0",
"markupsafe==3.0.2",
"paramiko==3.5.1",
"pycparser==2.22",
"pynacl==1.5.0",
"requests==2.32.4",
"six==1.17.0",
"soupsieve==2.7",
"typing-extensions==4.14.0",
"urllib3==2.5.0"
]
