[project]
name = "mcpvideo"
version = "0.1.0"
description = "AI agent to manage IBM Power Infrastructure via HMC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "smolagents[litellm,mcp]>=1.13.0",
    "requests",
    "bs4",
    "lxml",
    "tabulate",
    "six"
]

