[project]
name = "power-infra-agent"
version = "0.1.0"
description = "AI agent to manage Power Infra using MCP Server built for HMC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "nest_asyncio",
    "langchain_openai",
    "langchain_mcp_adapters",
    "langchain",
    "langgraph",
    "requests",
    "bs4",
    "lxml",
    "tabulate",
    "six"
]

